# alice-tools

./: .gitmodules  README-acx.md  README-ain.md  README-alice-ar.md  README-asd.md  README-ex.md  README-flat.md  README-project.md  README.md  conv.c  dasm.c  dasm.h  flake.nix  meson.build  rtt.sh  technology.haniwa.alice.metainfo.xml  technology.haniwa.alice.yml  technology.haniwa.galice.metainfo.xml  technology.haniwa.galice.yml
.github/workflows/: build.yml  linux.yml  windows.yml
acx/: acxbuild.c  acxdump.c  csv_lexer.l  csv_parser.y  meson.build
aincmp/: aincmp.c  excmp.c  meson.build
aindump/: aindump.c  aindump.h  dasm.c  dasm.h  guess_filenames.c  json.c  macros.c  meson.build
ainedit/: ainedit.c  ainedit.h  asm.c  asm_lexer.l  asm_parser.y  jaf.h  jaf_ast.c  jaf_compile.c  jaf_parser.y  jaf_static_analysis.c  jaf_types.c  meson.build  pje.c  repack.c  text.c  text_lexer.l  text_parser.y  transcode.c
ainedit/test/: and.jaf  array-arg.jaf  array-int.jaf  array-multi.jaf  array-string.jaf  bitior.jaf  bitxor.jaf  div.jaf  diva.jaf  do-while.jaf  f-div.jaf  f-gt.jaf  f-gte.jaf  f-lt.jaf  f-lte.jaf  f-minusa.jaf  f-mul.jaf  f-plusa.jaf  f-sub.jaf  float-ref.jaf  for.jaf  functype-ref-int.jaf  functype-void.jaf  functype.jaf  gt.jaf  if-else.jaf  if.jaf  int-ref.jaf  local-ref-string.jaf  local-ref-struct.jaf  lshift.jaf  lshifta.jaf  lt.jaf  minusa.jaf  mod.jaf  moda.jaf  neq.jaf  or.jaf  plusa.jaf  ref-array-int.jaf  (+11 more)
ar/: alice-ar.c  meson.build
ex/: ast.c  ast.h  dump.c  ex_lexer.l  ex_parser.y  exbuild.c  exdump.c  meson.build  pack.c
extra/: alice-project-init.sh
extra/thumbnailer/: README.md  alicetools.thumbnailer  image-ajp.xml  image-dcf.xml  image-pcf.xml  image-pms.xml  image-qnt.xml  image-rou.xml
flatpak/: technology.haniwa.alice.metainfo.xml  technology.haniwa.alice.yml  technology.haniwa.galice.desktop  technology.haniwa.galice.metainfo.xml  technology.haniwa.galice.mime.xml  technology.haniwa.galice.yml
fnl/: fnldump.c  meson.build
include/: aindump.h  ainedit.h  alice-ar.h  alice.h  archive.h  cJSON.h  dasm.h  ex_ast.h  jaf.h  kvec.h  little_endian.h
include/alice/: acx.h  ain.h  ar.h  ex.h  flat.h  jaf.h  port.h  project.h
linux/: technology.haniwa.alice.metainfo.xml  technology.haniwa.alice.yml  technology.haniwa.galice-mime.xml  technology.haniwa.galice.desktop  technology.haniwa.galice.yml
linux/servicemenus/: alice-acx-decompile.desktop  alice-ain-dump.desktop  alice-archive.desktop  alice-ex-decompile.desktop  alice-image.desktop  alice-manifest-pack.desktop  alice-mod-init.desktop  alice-project-build.desktop
src/: aincmp.c  alice.c  conv.c  dasm.c  fnldump.c  meson.build  util.c
src/acx/: build.c  csv_lexer.l  csv_parser.y  dump.c
src/aindump/: aindump.c  guess_filenames.c  json.c  macros.c
src/ainedit/: ainedit.c  asm.c  asm_lexer.l  asm_parser.y  jaf_ain.c  jaf_ast.c  jaf_compile.c  jaf_declaration.c  jaf_error.c  jaf_eval.c  jaf_lexer.l  jaf_parser.y  jaf_resolve.c  jaf_static_analysis.c  jaf_types.c  jaf_visitor.c  json.c  pje.c  repack.c  text.c  text_lexer.l  text_parser.y  transcode.c
src/ainedit/test/: anda.jaf  array-int.jaf  char-constant.jaf  eq.jaf  f-add.jaf  f-eq.jaf  local-ref-int.jaf  lte.jaf  mula.jaf  ref-array-item.jaf  ref-struct.jaf  rshift.jaf  rshifta.jaf  run-tests.sh  s-add.jaf  s-lt.jaf  ternary.jaf  test-runner.sh  while.jaf
src/ar/: afa_extract.c  extract.c  list.c  manifest_lexer.l  manifest_parser.c  manifest_parser.y  open.c  pack.c  write_afa.c
src/cg/: convert.c
src/cli/: acx_build.c  acx_dump.c  ain_compare.c  ain_dump.c  ain_edit.c  alice.c  ar_extract.c  ar_list.c  ar_pack.c  asd_build.c  asd_dump.c  cg_convert.c  cg_thumbnail.c  cli.h  ex_build.c  ex_compare.c  ex_dump.c  ex_edit.c  flat_build.c  flat_extract.c  fnl_dump.c  project_build.c  project_init.c
src/core/: acx.c  cJSON.c  conv.c  csv_parser.y  flat.c  pje.c  port.c  scale.c  util.c
src/core/ain/: asm.c  asm.h  asm_parser.y  dasm.c  dump.c  guess_filenames.c  json_dump.c  json_read.c  macros.c  repack.c  text.c  text_lexer.l  text_parser.y  transcode.c
src/core/ar/: extract.c  manifest_lexer.l  manifest_parser.c  manifest_parser.y  open.c  pack.c  write_afa.c
src/core/ex/: ast.c  ast.h  dump.c  pack.c  txtex_lexer.l  txtex_parser.y
src/core/jaf/: ain.c  ast.c  compile.c  declaration.c  error.c  eval.c  jaf_lexer.l  jaf_parser.y  resolve.c  static_analysis.c  types.c  visitor.c
src/ex/: ast.c  dump.c  edit.c  ex_lexer.l  ex_parser.y  exbuild.c  excmp.c  exdump.c  pack.c
src/flat/: build.c  extract.c
src/gui/: acx_model.cpp  acx_model.hpp  acx_view.cpp  acx_view.hpp  ain_functions_model.cpp  ain_functions_model.hpp  ain_objects_model.cpp  ain_objects_model.hpp  ain_view.cpp  ain_view.hpp  ex_model.cpp  ex_model.hpp  ex_table_model.cpp  ex_table_model.hpp  ex_table_view.cpp  ex_table_view.hpp  ex_view.cpp  ex_view.hpp  file_manager.cpp  file_manager.hpp  filesystem_view.cpp  filesystem_view.hpp  galice.cpp  galice.hpp  jaf_view.cpp  jaf_view.hpp  jam_view.cpp  jam_view.hpp  mainwindow.cpp  mainwindow.hpp  navigator.cpp  navigator.hpp  navigator_model.cpp  navigator_model.hpp  navigator_node.cpp  navigator_node.hpp  navigator_view.cpp  navigator_view.hpp  sjisdecoder.cpp  sjisdecoder.hpp  (+4 more)
src/project/: build.c  pje.c
test/: rtt-acx.sh  rtt-ain.sh  rtt-ex.sh  test-acx.sh  test-ain.sh  test-ex.sh
test/acx/: .gitignore
test/ain/: .gitignore
test/ar/: alicepack.manifest  batchpack.manifest  run-tests.sh
test/ex/: .gitignore  test.ex  test.x
test/jaf/: add.jaf  array-arg.jaf  array-string.jaf  bitand.jaf  const-global.jaf  const-local.jaf  f-diva.jaf  f-mula.jaf  f-neq.jaf  goto.jaf  gte.jaf  iora.jaf  lint-add.jaf  lint-anda.jaf  lint-div.jaf  lint-diva.jaf  lint-iora.jaf  lint-lshifta.jaf  lint-minusa.jaf  lint-mod.jaf  lint-moda.jaf  lint-mul.jaf  lint-mula.jaf  lint-plusa.jaf  lint-rshifta.jaf  lint-sub.jaf  lint-xora.jaf  message-call.jaf  message.jaf  mul.jaf  override.jaf  ref-array-int.jaf  run-tests.sh  s-empty.jaf  s-erase.jaf  s-find.jaf  (+11 more)
windows/: _alice-ar-extract.bat  setup.iss
(+99 files in other folders)
