aindump = ['../cJSON.c',
           '../conv.c',
           '../dasm.c',
           'aindump.c',
           'dasm.c',
           'guess_filenames.c',
           'json.c',
           'macros.c',
]

executable('aindump', aindump,
           dependencies : tool_deps,
           include_directories : incdir)
